tests/compile-fail/compile_fail__jump_missing_label.snap
---
source: tests/compile-fail.rs
expression: stderr
---
error: undefined label 'label'
   ┌─ <input>:21:14
   │
21 │         goto label;
   │              ^^^^^ there is no label by this name


